--- a/04_Production_RAG/LangSmith_and_Evaluation.ipynb
+++ b/04_Production_RAG/LangSmith_and_Evaluation.ipynb
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -105,15 +105,7 @@
         "id": "ADl8-whIAUHD",
         "outputId": "927fd78b-8510-4bea-9e68-a3c74d3eb5a1"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Enter your OpenAI API Key:··········\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "import getpass\n",
@@ -134,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "m9U0SbQN2sWc"
       },
@@ -189,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,7 +194,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Fetching pages: 100%|##########| 220/220 [00:08<00:00, 24.73it/s]\n"
+            "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+            "Fetching pages: 100%|##########| 285/285 [00:45<00:00,  6.25it/s]\n"
           ]
         }
       ],
@@ -232,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "SzolG1FLx2f_"
       },
@@ -251,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -263,10 +256,10 @@
         {
           "data": {
             "text/plain": [
-              "4821"
+              "6066"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -336,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "7M0X1eVlWPFf"
       },
@@ -1136,11 +1129,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.7"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
